# Flink_Realtime_Data_Pipeline_Project

./: README.md  aggregation_job.py  consumer.ipynb  consumer_db.ipynb  docker-compose.yaml  main.py  models.py  pass_through_job.py  producer.ipynb  producer_realtime.py  pyproject.toml
